--- a/landing.html
+++ b/landing.html
@@ -1,10 +1,36 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="landscape.css" media="screen and (orientation:landscape)"/>
+    <link rel="stylesheet" type="text/css" href="style.css"/>
+    <meta name="viewport" content="width=device-width, user-scalable=no" />
+    <title> coviDinner </title>
+</head>
+
+<body>
+    <!-- HTML5 article tag for content -->
+    <div id="content">
+
+    <header>CoviDinner</header>
+
+   <!-- WPI image -->
+   <img id="covid" src="masks.jpg" width="320" />
+
+   <!-- H1 means 1st level heading -->
+   <h1>Are you hungry!</h1>
+
+   <!-- Navigation buttons -->
+   <nav id="main_nav">
+      <ul>
+         <!-- LI stands for list item -->
+         <li><a href="create.html">Create a party!</a></li>
+         <li><a href="join.html">Join a party!</a></li>
+         <li><a href="view.html">Check status of a party!</a></li>
+      </ul>
+   </nav>
+
+   <footer>CS3041: Human-Computer Interaction </footer>
+    </div>
+</body>
 </html>
